# GENAI_PRACTICE

./: README.md  app.py  main.ipynb  main.py  pyproject.toml  requirements.txt
notebooks/: genai.ipynb
pipeline/: bot.py  db.py  main.ipynb  output_schema.py  prompts.py  utils.py
